implementing covered patterns

--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -109,42 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['trill keys 1',\n",
-       " 'trill keys 2',\n",
-       " '+thumb',\n",
-       " '+thumb',\n",
-       " '+thumb',\n",
-       " 'trill keys 1+2',\n",
-       " 1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8]"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bags['fingering']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -152,33 +117,69 @@
    "source": [
     "covered = [{'a':[1]+7*[0], 'b':[0,1]+6*[0]}, \n",
     "           {'a':2*[1]+6*[0], 'b':4*[0]+2*[1]+2*[0]},\n",
-    "           {'a':[, 'b':}\n",
+    "           {'a':3*[1]+5*[0], 'b':2*[1]+2*[0]+1*[1]+3*[0]},\n",
+    "           {'a':3*[1]+1*[0]+1*[1]+3*[0], 'b':1*[1]+3*[0]+3*[1]+1*[0]},\n",
+    "           {'a':3*[1]+1*[0]+2*[1]+2*[0], 'b':1*[0]+2*[1]+1*[0]+3*[1]+1*[0]},\n",
+    "           {'a':3*[1]+1*[0]+3*[1]+1*[0], 'b':1*[0]+2*[1]+1*[0]+4*[1]},\n",
+    "           {'a':3*[1]+1*[0]+3*[1]+1*[0]},\n",
+    "           {'a':8*[1]}\n",
     "          ]\n",
-    "# each list implements the 8 holes to cover, left to right\n",
-    "\n",
-    "# check length of each list and if they add up to index"
+    "# each list implements the 8 holes to cover, left to right"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0, 0, 0, 0, 1, 1, 0, 0]"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "covered\n",
+      "1a: [1, 0, 0, 0, 0, 0, 0, 0] True True\n",
+      "1b: [0, 1, 0, 0, 0, 0, 0, 0] True True\n",
+      "2a: [1, 1, 0, 0, 0, 0, 0, 0] True True\n",
+      "2b: [0, 0, 0, 0, 1, 1, 0, 0] True True\n",
+      "3a: [1, 1, 1, 0, 0, 0, 0, 0] True True\n",
+      "3b: [1, 1, 0, 0, 1, 0, 0, 0] True True\n",
+      "4a: [1, 1, 1, 0, 1, 0, 0, 0] True True\n",
+      "4b: [1, 0, 0, 0, 1, 1, 1, 0] True True\n",
+      "5a: [1, 1, 1, 0, 1, 1, 0, 0] True True\n",
+      "5b: [0, 1, 1, 0, 1, 1, 1, 0] True True\n",
+      "6a: [1, 1, 1, 0, 1, 1, 1, 0] True True\n",
+      "6b: [0, 1, 1, 0, 1, 1, 1, 1] True True\n",
+      "7a: [1, 1, 1, 0, 1, 1, 1, 0] True False\n",
+      "8a: [1, 1, 1, 1, 1, 1, 1, 1] True True\n"
+     ]
     }
    ],
    "source": [
-    "covered[1]['b']"
+    "# print out the patterns and check length of each list and if they add up to index\n",
+    "print \"covered\"\n",
+    "choices=['a','b']\n",
+    "for i in range(len(covered)):\n",
+    "    for j in range(len(covered[i])):\n",
+    "        lenlist=True\n",
+    "        sumlist=True\n",
+    "        if  len(covered[i][choices[j]])!=8:\n",
+    "            lenlist=False\n",
+    "        if sum(covered[i][choices[j]])!=i+1:\n",
+    "            sumlist=False\n",
+    "        print str(i+1)+choices[j]+\": \"+str(covered[i][choices[j]])+\" \"+str(lenlist)+\" \"+str(sumlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
