trying to find system in durations, finding it (1-50) and finding error (2*6 instead of 6 and 9)

--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -173,13 +173,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[37,\n",
+       " 35,\n",
+       " 28,\n",
+       " 15,\n",
+       " 31,\n",
+       " 27,\n",
+       " 44,\n",
+       " 22,\n",
+       " 2,\n",
+       " 38,\n",
+       " 24,\n",
+       " 6,\n",
+       " 3,\n",
+       " 48,\n",
+       " 18,\n",
+       " 26,\n",
+       " 46,\n",
+       " 36,\n",
+       " 14,\n",
+       " 30,\n",
+       " 42,\n",
+       " 8,\n",
+       " 33,\n",
+       " 34,\n",
+       " 45,\n",
+       " 16,\n",
+       " 29,\n",
+       " 47,\n",
+       " 21,\n",
+       " 50,\n",
+       " 10,\n",
+       " 7,\n",
+       " 32,\n",
+       " 13,\n",
+       " 23,\n",
+       " 39,\n",
+       " 41,\n",
+       " 20,\n",
+       " 25,\n",
+       " 40,\n",
+       " 11,\n",
+       " 17,\n",
+       " 1,\n",
+       " 12,\n",
+       " 5,\n",
+       " 43,\n",
+       " 19,\n",
+       " 4,\n",
+       " 6,\n",
+       " 49]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "int_duration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 36,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 49,\n",
+       " 50]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int_duration.sort()\n",
+    "int_duration"
    ]
   },
   {
