trying alternative implementation of airflow and mouthpiece but doesn't make sense

--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -316,23 +316,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "bags['airflow'] = [0, 0.5, 1]"
+    "bags['airflow'] = np.linspace(0,1,3,endpoint=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  0.5,  1. ])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bags['airflow']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bags['mouthpiece'] = np.linspace(0,1,5,endpoint=True)\n",
+    "bags['mouthpiece']"
+   ]
   },
   {
    "cell_type": "markdown",
