--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -322,12 +322,12 @@
    },
    "outputs": [],
    "source": [
-    "bags['airflow'] = np.linspace(0,1,3,endpoint=True)"
+    "bags['airflow'] = [0, 0.5, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -335,39 +335,16 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0. ,  0.5,  1. ])"
+       "array([ 0.        ,  0.33333333,  0.66666667,  1.        ])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bags['airflow']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ])"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bags['mouthpiece'] = np.linspace(0,1,5,endpoint=True)\n",
-    "bags['mouthpiece']"
+    "bags['mouthpiece'] = [0, 0.25, 0.5, 1]"
    ]
   },
   {
