adding articulations bag

--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -381,6 +381,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bags['articulation'] = ['.', '-', '>', '>>', 'mini tongue ram @end of breath']\n",
+    "# what do these mean? \n",
+    "# does the direction of the arrows matter?\n",
+    "# is the double arrow ok?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.', '-', '>', '>>', 'mini tongue ram @end of breath']"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bags['articulation']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
