adding technique bags 1 and 2 very literally

--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -417,6 +417,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#text and glissandi\n",
+    "bags['techniques_1'] = ['expel air', 'frustration', 'grant', 'sigh',\n",
+    "                        'text spoken mouthing vowels u',\n",
+    "                        'text spoken mouthing vowels i',\n",
+    "                        'text spoken mouthing vowels e',\n",
+    "                        'text spoken mouthing vowels o',\n",
+    "                        'text spoken mouthing vowels a',\n",
+    "                        'text spoken mouthing consonants k',\n",
+    "                        'text spoken mouthing consonants s',\n",
+    "                        'text spoken mouthing consonants f',\n",
+    "                        'text spoken mouthing consonants d',\n",
+    "                        'glissandi of pitch/sounds',\n",
+    "                        'glissandi of air',\n",
+    "                        'glissandi of grand', \n",
+    "                        'glissandi of fingering',\n",
+    "                        'glissandi of whistle',\n",
+    "                        'text sung, ossia ...tone?'\n",
+    "                        'text spoken speaking using pitch too, of air / the breath, med., Tim Minton',\n",
+    "                        'text spoken speaking using pitch too, of air / the breath, high, Tim Minton',\n",
+    "                        'text spoken speaking using pitch too, of air / the breath, high, Tim Minton',\n",
+    "                        'text spoken speaking using voice, ord., Tim Minton']\n",
+    "# separate glissandi, text and others? and have additional layer to choose?\n",
+    "# why do they actually go together?\n",
+    "# how did you choose the consonants?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# everything else\n",
+    "bags['techniques_2'] = ['whistle tone / flute whistle',\n",
+    "                       'gravel (only out) in voice',\n",
+    "                       'gravel (only out) alone',\n",
+    "                       'whistle tooth (only out)',\n",
+    "                        'beating (singing+air), .5 covered',\n",
+    "                        'beating (singing+air), .25 covered',\n",
+    "                       'whistle body (i.e. lips) (in/out)',\n",
+    "                       'whistle sssss',\n",
+    "                       'spit / saliva sound']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['whistle tone / flute whistle',\n",
+       " 'gravel (only out) in voice',\n",
+       " 'gravel (only out) alone',\n",
+       " 'whistle tooth (only out)',\n",
+       " 'beating (singing+air), .5 covered',\n",
+       " 'beating (singing+air), .25 covered',\n",
+       " 'whistle body (i.e. lips) (in/out)',\n",
+       " 'whistle sssss',\n",
+       " 'spit / saliva sound']"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bags['techniques_2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
