--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +233,7 @@
        " 49]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
        " 50]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +371,7 @@
        "['<', '>', 'f', 'p', 'ff', 'pp', 'fff', 'ppp', 'mf', 'mp']"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -407,7 +407,7 @@
        "['.', '-', '>', '>>', 'mini tongue ram @end of breath']"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -441,9 +441,9 @@
     "                        'glissandi of fingering',\n",
     "                        'glissandi of whistle',\n",
     "                        'text sung, ossia ...tone?'\n",
-    "                        'text spoken speaking using pitch too, of air / the breath, med., Tim Minton',\n",
+    "                        'text spoken speaking using pitch too, of air / the breath, medium, Tim Minton',\n",
     "                        'text spoken speaking using pitch too, of air / the breath, high, Tim Minton',\n",
-    "                        'text spoken speaking using pitch too, of air / the breath, high, Tim Minton',\n",
+    "                        'text spoken speaking using pitch too, of air / the breath, low, Tim Minton',\n",
     "                        'text spoken speaking using voice, ord., Tim Minton']\n",
     "# separate glissandi, text and others? and have additional layer to choose?\n",
     "# why do they actually go together?\n",
@@ -452,7 +452,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bags['techniques_1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "bags['techniques_1'] = ['expel air', 'frustration', 'grant', 'sigh', 'text sung, ossia ..?']\n",
+    "bags['techniques_1'] += ['glissandi of '+str(x) for x in ['air', 'grand', 'fingering', 'whistle']]\n",
+    "bags['techniques_1'] += ['text spoken mouthing vowels '+str(x) for x in ['a', 'e', 'i', 'o', 'u']]\n",
+    "bags['techniques_1'] += ['text spoken mouthing consonants '+str(x) for x in ['k', 's', 'f', 'd']]\n",
+    "bags['techniques_1'] += ['text spoken, Tim Minton, speaking using '+str(x) for x in \n",
+    "                        ['voice, ordinary']+['pitch too, of air/the breath '\n",
+    "                                             +str(y) for y in ['low', 'medium', 'high']]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bags['techniques_1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['expel air',\n",
+       " 'frustration',\n",
+       " 'grant',\n",
+       " 'sigh',\n",
+       " 'text sung, ossia ..?',\n",
+       " 'glissandi of air',\n",
+       " 'glissandi of grand',\n",
+       " 'glissandi of fingering',\n",
+       " 'glissandi of whistle',\n",
+       " 'text spoken mouthing vowels a',\n",
+       " 'text spoken mouthing vowels e',\n",
+       " 'text spoken mouthing vowels i',\n",
+       " 'text spoken mouthing vowels o',\n",
+       " 'text spoken mouthing vowels u',\n",
+       " 'text spoken mouthing consonants k',\n",
+       " 'text spoken mouthing consonants s',\n",
+       " 'text spoken mouthing consonants f',\n",
+       " 'text spoken mouthing consonants d',\n",
+       " 'text spoken, Tim Minton, speaking using voice, ordinary',\n",
+       " 'text spoken, Tim Minton, speaking using pitch too, of air/the breath low',\n",
+       " 'text spoken, Tim Minton, speaking using pitch too, of air/the breath medium',\n",
+       " 'text spoken, Tim Minton, speaking using pitch too, of air/the breath high']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bags['techniques_1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -472,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -491,7 +595,7 @@
        " 'spit / saliva sound']"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
