starting to implement piece, alternate in and out breath

--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -615,6 +615,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n",
+      "odd\n",
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "\n",
+    "while count < 10:\n",
+    "    count += 1\n",
+    "    \n",
+    "    if count%2==0:\n",
+    "        print 'even'\n",
+    "    else:\n",
+    "        print 'odd'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
