--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -695,21 +695,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def pick(bag):\n",
+    "    paper = bags[bag][randint(0, len(bags[bag])-1)]\n",
+    "    return paper\n",
+    "\n",
+    "piece = []\n",
+    "count = 0"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'dict'>\n",
+      "<type 'dict'>\n",
+      "<type 'dict'>\n",
+      "<type 'dict'>\n",
+      "<type 'dict'>\n",
+      "<type 'dict'>\n",
+      "<type 'dict'>\n",
+      "<type 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "while count < 20: # will have to be replaced by duration time lenght, testing\n",
+    "\n",
+    "    count += 1\n",
+    "    part = dict()\n",
+    "    part['count'] = count\n",
+    "\n",
+    "    # alternate in and out\n",
+    "    if count%2==0:\n",
+    "        part['breath']=1 # in breath\n",
+    "    else:\n",
+    "        part['breath']=0 # out breath\n",
+    "\n",
+    "    '''hold breath'''\n",
+    "    # decide whether to pick\n",
+    "    if pick('yesno'):\n",
+    "        part['hold_breath'] = {'type':pick('hold_breath')}\n",
+    "        print type(part['hold_breath'])\n",
+    "\n",
+    "        # check if hold breath fits to in/out\n",
+    "        if ((part['breath'] and 'out' in part['hold_breath']) \\\n",
+    "            or (not part['breath'] and 'in' in part['hold_breath'])):\n",
+    "            del part['hold_breath']\n",
+    "\n",
+    "        # if hold breath still exists, pick timing and duration\n",
+    "        #else:\n",
+    "    #        pick['duration']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'hold_breath'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-7c06918f6c24>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpart\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'hold_breath'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 'hold_breath'"
+     ]
+    }
+   ],
+   "source": [
+    "part['hold_breath']"
+   ]
   },
   {
    "cell_type": "markdown",
