fixing bug in crescendo diminuendo where start is extremum

--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -967,6 +967,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bags['dynamics'] = ['<', '>']\n",
+    "#bags['dynamics'] += [(x+1)*y if x < 3 else 'm'+y\n",
+    "#                     for x in range(4) for y in ['f','p']]\n",
+    "bags['dynamics'] += range(-4,0)+range(1,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max([x for x in bags['dynamics'] if type(x)==int])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
