turning gradual dynamics into function

--- a/flute_piece_v1.ipynb
+++ b/flute_piece_v1.ipynb
@@ -1003,6 +1003,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-4"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min([x for x in bags['dynamics'] if type(x)==int])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
